Fix layout overflow and other minor bugs

--- a/public/scss/_reset.scss
+++ b/public/scss/_reset.scss
@@ -2,7 +2,13 @@
 	word-wrap: break-word;
 }
 
-h1, h2, h3, h4, h5, h6, p {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
 	margin: 0;
 	padding: 0;
 }
@@ -12,7 +18,8 @@ a {
 	text-direction: none;
 }
 
-ul, li {
+ul,
+li {
 	list-style: none;
 	margin: 0;
 	padding: 0;
